--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,15 @@ services:
     image: rsend
     build: ./rsend/
     ports:
-      - "8081:8080"
+      - "8081:8081"
+    depends_on:
+      kafka0:
+        condition: service_healthy
+  transfer:
+    image: transfer
+    build: ./transfer/
+    ports:
+      - "8082:8082"
     depends_on:
       kafka0:
         condition: service_healthy
